Rename binaries to GoldSaucer-CLI/GUI, add new randomisation options
Added binary name configuration in Cargo.toml for both CLI and GUI. Added new randomisation options: starting_materia_all_types, randomize_starting_armor, and keep_weapon_appearance. Changed default values for randomize_enemies to false. Improved boss detection logic in scene randomisation to be more conservative (HP >= 10k or level >= 45). Changed enemy formation randomisation to swap entire scene contents instead of just enemy

--- a/Randomiser/randomiser-cli/Cargo.toml
+++ b/Randomiser/randomiser-cli/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 randomiser-core = { path = "../randomiser-core" }
+
+[[bin]]
+name = "GoldSaucer-CLI"
+path = "src/main.rs"
